My suggested changes for Exercise #1 (Using Classes) (#19)
* The explicit System.exit(0) is unnecessary since it would exit with that return code anyway if execution reaches the final statement without failure.

* Refactored because the method used to create URL in the original code is deprecated in recent versions of Java. Also, only one of the URL parameters was getting URLencoded. Finally, I added a couple of comments to help the learner better understand the the main thing that this code does.

* reformatted and very slight refactorings to better reflect conventions

* Updated to include setter methods, like the solution does. The exercise steps do not mention modifying the code, so I assume their absence in the practice version was a mistake.

* revised return statement to make the transition from practice version easier

* updated to backport improvements in solution version to the practice version

* tabs to spaces, per Google style guide

* some more revisions after testing it

* tab to spaces

* fixed a typo

* Removing unnecessary TODO comments

* Add override annotation for toString, per standard practice

* add override annotation, per standard practice