@@ -1,5 +1,6 @@
 package translationworkflow;
 
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.io.BufferedReader;
@@ -16,27 +17,31 @@ public class TranslationActivitiesImpl implements TranslationActivities {
     String term = input.getTerm();
     String lang = input.getLanguageCode();
 
-    StringBuilder builder = new StringBuilder();
-
-    String baseUrl = "http://localhost:9999/translate?term=%s&lang=%s";
-
+    // construct the URL, with supplied input parameters, for accessing the microservice
     URL url = null;
     try {
-      url = new URL(String.format(baseUrl, term, lang, URLEncoder.encode(term, "UTF-8")));
+      String baseUrl = "http://localhost:9999/translate?term=%s&lang=%s";
+      url = URI.create(
+              String.format(baseUrl, 
+                URLEncoder.encode(term, "UTF-8"), 
+                URLEncoder.encode(lang, "UTF-8")))
+              .toURL();
     } catch (IOException e) {
       throw Activity.wrap(e);
     }
 
+    // Make the HTTP request, extract the translation from the response, and return it
+    StringBuilder content = new StringBuilder();
     try (BufferedReader in = new BufferedReader(new InputStreamReader(url.openStream()))) {
       String line;
       while ((line = in.readLine()) != null) {
-        builder.append(line);
+        content.append(line);
       }
     } catch (IOException e) {
       throw Activity.wrap(e);
     }
 
-    TranslationActivityOutput translation = new TranslationActivityOutput(builder.toString());
-    return translation;
+    String translation = content.toString();
+    return new TranslationActivityOutput(translation);
   }
 }
